--- a/styles/index.css
+++ b/styles/index.css
@@ -6,3 +6,5 @@
 
 /* COMPONENTS */
 @import "./components/text-input.css";
+@import "./components/header.css";
+@import "./components/user-menu.css";
