--- a/styles/index.css
+++ b/styles/index.css
@@ -8,3 +8,4 @@
 @import "./components/text-input.css";
 @import "./components/header.css";
 @import "./components/user-menu.css";
+@import "./components/applications-header.css";
