feat: filters select & search params flow

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,3 +10,4 @@
 @import "./components/header.css";
 @import "./components/user-menu.css";
 @import "./components/applications-header.css";
+@import "./components/filter.css";
