feat: application modal ui

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,3 +11,4 @@
 @import "./components/user-menu.css";
 @import "./components/applications-header.css";
 @import "./components/filter.css";
+@import "./components/application-modal.css";
